@@ -32,6 +32,7 @@ Fixes:
     zlib to work directly with compressed databases. Passing this to
     configure makes the game act like pre p8 ones. [SW]
   * member() now ignores ANSI in matches. Reported by Minion. [MG]
+  * Regexp $-commands are now ansi aware. As in: ansi is passed to %0-%9. [GM]
 
 & 1.8.3p9
 Version 1.8.3 patchlevel 9                      Feb 28, 2009
